--- a/EHCE_blog/scipts/Regression/season_reg.qmd
+++ b/EHCE_blog/scipts/Regression/season_reg.qmd
@@ -37,7 +37,7 @@ counties_geo <- readRDS(counties_file_path)[[1]]
 
 ```{r}
 dat_path <- file.path(source_dir,
-                      "Counties_compiled_admin_geo_ehe_ece_sf_2008_2022.rds")
+                      "S190_T002_Counties_compiled_admin_geo_ehe_ece_sf_2008_2022.rds")
 file_size <- file.info(dat_path)$size
 dat <- readRDS(dat_path)[[1]]
 ```
@@ -104,18 +104,20 @@ county_boundaris_catalog_all <- merge(counties_geo,
           all.x = TRUE,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
-# area all map
-ggplot() +
+# map
+p_duration = ggplot() +
   geom_sf(data = county_boundaris_catalog_all,
             aes(fill = estimate), color = NA,
             lwd = .1) + 
   scale_fill_distiller(palette = "PuOr", 
-                       limits = c(-9, 9)
+                       limits = c(-8, 8)
                        ) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.01, alpha = 0.2) +
   labs(fill = "EHE Duration") +
   theme_void() + 
   theme(legend.position = "bottom")
+p_duration
+
 ```
 
 ### First Event Analysis
@@ -145,19 +147,22 @@ county_boundaris_catalog_all <- merge(counties_geo,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
 # area all map
-ggplot() +
+p_first_event = ggplot() +
   geom_sf(data = county_boundaris_catalog_all,
             aes(fill = estimate), color = NA,
             lwd = .1) + 
   scale_fill_distiller(palette = "PuOr", 
-                       limits = c(-17.2, 17.2)
+                       limits = c(-15, 15)
                        ) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.01, alpha = 0.2) +
   labs(fill = "EHE First Event Date") +
   theme_void() + 
   theme(legend.position = "bottom")
-
-
+p_first_event
+#png("~/Desktop/ehe_ece_data_integration/post/output/season_first_event.png",
+#    height = 5, width = 7, res = 300, units = "in")
+#print(p_first_event)
+#dev.off()
 ```
 
 ### Last Event Date Analysis
@@ -186,17 +191,23 @@ county_boundaris_catalog_all <- merge(counties_geo,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
 # area all map
-ggplot() +
+p_last_event = ggplot() +
   geom_sf(data = county_boundaris_catalog_all,
             aes(fill = estimate), color = NA,
             lwd = .1) + 
   scale_fill_distiller(palette = "PuOr", 
-                       limits = c(-25, 25)
+                       limits = c(-16, 16)
                        ) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.01, alpha = 0.2) +
   labs(fill = "EHE Last Event Date") +
   theme_void() + 
   theme(legend.position = "bottom")
+p_last_event
+#png("~/Desktop/ehe_ece_data_integration/post/output/season_last_event.png",
+#    height = 5, width = 7, res = 300, units = "in")
+#print(p_last_event)
+#dev.off()
+
 
 #ggplot(result, aes(x = year_numerical, y = total_days, group = GEOID, color = GEOID)) +
 #  geom_line() +
