--- a/EHCE_blog/scipts/Regression/area_reg.qmd
+++ b/EHCE_blog/scipts/Regression/area_reg.qmd
@@ -37,7 +37,7 @@ counties_geo <- readRDS(counties_file_path)[[1]]
 
 ```{r}
 dat_path <- file.path(source_dir,
-                      "Counties_compiled_admin_geo_ehe_ece_sf_2008_2022.rds")
+                      "S190_T002_Counties_compiled_admin_geo_ehe_ece_sf_2008_2022.rds")
 file_size <- file.info(dat_path)$size
 dat <- readRDS(dat_path)[[1]]
 ```
@@ -98,7 +98,7 @@ county_boundaris_catalog_all <- merge(counties_geo,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
 # area all map
-ggplot() +
+p_area_ehce = ggplot() +
   geom_sf(data = county_boundaris_catalog_all,
             aes(fill = slope), color = NA,
             lwd = .1) + 
@@ -110,6 +110,7 @@ ggplot() +
   labs(fill = "EHCE Impacted Area Ratio Coefficient") +
   theme_void() + 
   theme(legend.position = "bottom")
+p_area_ehce
 ```
 
 ### Extreme Heat Events
@@ -160,7 +161,7 @@ county_boundaris_ehe_catalog <- merge(counties_geo,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
 # Area EHE map
-ggplot() +
+p_area_ehe = ggplot() +
   geom_sf(data = county_boundaris_ehe_catalog,
             aes(fill = slope),color = NA,
             lwd = .1) + 
@@ -171,6 +172,8 @@ ggplot() +
   labs(fill = "EHE Impacted Area Ratio Coefficient") +
   theme_void() + 
   theme(legend.position = "bottom")
+p_area_ehe
+
 ```
 
 ### Extreme Cold Events
@@ -221,7 +224,7 @@ county_boundaris_ece_catalog <- merge(counties_geo,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
 # Area ECE map
-ggplot() +
+p_area_ece = ggplot() +
   geom_sf(data = county_boundaris_ece_catalog,
             aes(fill = slope), color = NA,
             lwd = .1) + 
@@ -232,4 +235,9 @@ ggplot() +
   labs(fill = "ECE Impacted Area Ratio Coefficient") +
   theme_void() + 
   theme(legend.position = "bottom")
+p_area_ece
+#png("~/Desktop/ehe_ece_data_integration/post/output/area_reg_ece.png",
+#    height = 5, width = 7, res = 300, units = "in")
+#print(p_area_ece)
+#dev.off()
 ```
